unpackaged/main/default/objects/Sales_Office_Customer__c/Sales_Office_Customer__c.object-meta.xml
<CustomObject>
    <label>Sales Office Customer</label>
    <nameField>
        <displayFormat>SOC-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Office Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>