unpackaged/main/default/objects/Sales_Office_Customer__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected account must be of Customer record type.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Office Customers</relationshipLabel>
        <relationshipName>Sales_Office_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>