unpackaged/main/default/objects/Sales_Office_Customer__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Sales Office Customers</relationshipLabel>
        <relationshipName>Sales_Office_Customers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>